kubernetes/longhorn/08-oauth2-middleware-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: longhorn-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
