kubernetes/longhorn/03-oauth2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: longhorn-system
  labels:
    app: oauth2-proxy
spec:
  ports:
    - port: 4180
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oauth2-proxy
