kubernetes/longhorn/12-ingress-longhorn.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.khazadlab.duckdns.org
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
  tls:
    - hosts:
        - longhorn.khazadlab.duckdns.org
      secretName: tls-longhorn-ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: |
      longhorn-system-redirect-to-https@kubernetescrd,
      longhorn-system-longhorn-oauth2-proxy@kubernetescrd,
      longhorn-system-oauth2-errors@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.khazadlab.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - longhorn.khazadlab.duckdns.org
      secretName: tls-longhorn-ingress
